   * Added battery recharge cycle count to the ToolTip (if available, currently
     only when using SMAPI on ThinkPads)
   * API documentation and refinements
   * New tab-splitted config dialog
   * Made all information paths configurable (ACPI, SMAPI)
   * #25: support for uncommon battery information locations
   * ACPI and SMAPI can be be separately enabled and disabled

KThinkBat 0.2.6 - 29.04.2007:
   * Added Slowak Translation provided by Jozef Riha
   * #13: Display of remaining time when bios/acpi report no power consumption
   * Added more translated battery status strings
   * enhanced BatInfo API
   * more API documentation
   * power consumption appearance can be configured

KThinkBat 0.2.5 - 03.04.2007:
   * #20: New translation for Bulgarian from Aleksandar Tsankov
   * Reworked icon set which is now more oxygen-like and with a shadow, send by
     Luis Guillermo Sobalvarro
   * #21: Added one translated message to Italian translation
   * Update to the Spanish translation to be easier understandable, thanks to 
     Luis Guillermo Sobalvarro (again)
   * Remaining time can be shown in hours format (h:mm) or in minutes (m min)
   * More German translations

KThinkBat 0.2.4 - 06.01.2007:
   * #11: better detection, if battery is installed or not
   * #12: more control over the text labels, the battery gauge content can now 
     be empty or display remaining time or remaining power
   * more German translations
   * #8: slightly rearranged config dialog
   * #14: Don't display remaining time of 0 min if battery is fully charged but
    show the word "full" instead
   * #19: Added Italian translation provided by Anselmo Luginbühl

KThinkBat 0.2.3 - 18.11.2006:
   * #10: Adapt remaining time calculation to ampere based battery information
     on Asus and Acer laptops
   * #10: optimized ACPI parsing and ampere/volt detection
   * #10, #8: made ACPI and SMAPI path configurable via config file (this makes